spacing issues

--- a/test-style.css
+++ b/test-style.css
@@ -20,7 +20,7 @@ h4 {
 }
 
 .pages.show.home .show-content {
-  padding-top: -25px;
+  margin-top: -25px;
 }
 
 .header-bar {
@@ -277,7 +277,7 @@ i.gnct_inst_menu_icon {
 /* Banner Header Logo */
 .bnr-hdr-logo {
   float: left;
-  padding: 10% 5px;
+  padding: 30% 5px;
   max-width: 25%;
   background-color: #144734;
   border: 1px solid white;
